--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,7 @@ author :
   email : None
   github : None
   twitter : None
+  feedburner : Catofann
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt
